<resources>

    <string name="app_name">Tubarão</string>
    <string name="recompensa_dois_pontos">"Recompensa:\nR$ "</string>
    <string name="investimento_dois_pontos">"Investimento:\nR$ "</string>
    <string name="lucro_dois_pontos">"Lucro:\nR$ "</string>
    <string name="concurso">"Concurso"</string>
    <string name="jogo1">"Jogo 1"</string>
    <string name="jogo2">"Jogo 2"</string>
    <string name="jogo3">"Jogo 3"</string>
    <string name="jogo4">"Jogo 4"</string>
    <string name="concurso_dois_pontos">"Concurso:"</string>
    <string name="cidade_dois_pontos">"Cidade:"</string>
    <string name="premio_15_pontos">"Prêmio de 15 pontos:"</string>
    <string name="premio_14_pontos">"Prêmio de 14 pontos:"</string>
    <string name="premio_13_pontos">"Prêmio de 13 pontos:"</string>
    <string name="premio_12_pontos">"Prêmio de 12 pontos:"</string>
    <string name="premio_11_pontos">"Prêmio de 11 pontos:"</string>
    <string name="sair">"Sair"</string>
    <string name="sair_pergunta">"Deseja sair do aplicativo?"</string>
    <string name="sim">"Sim"</string>
    <string name="nao">"Não"</string>
    <string name="nenhum_concurso_cadastrado">"Nenhum concurso cadastrado"</string>
    <string name="resultados_do_concurso">"Resultados do concurso "</string>
    <string name="cancelar">"Cancelar"</string>
    <string name="salvar">"Salvar"</string>
    
</resources>
