<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@android:color/darker_gray"
	    android:orientation="horizontal" >
	    
		<TextView 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"
		    android:textSize="@dimen/text_size_header"
		    android:text="@string/concurso"/>
	
		<TextView 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"
		    android:textSize="@dimen/text_size_header"
		    android:text="@string/jogo1"/>
	
		<TextView 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"
		    android:textSize="@dimen/text_size_header"
		    android:text="@string/jogo2"/>
	
		<TextView 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:gravity="center"
		    android:textColor="@android:color/white"
		    android:textStyle="bold"
		    android:textSize="@dimen/text_size_header"
		    android:text="@string/jogo3"/>
	
		<Space 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
			android:layout_weight="1"/>

		<Space 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
			android:layout_weight="1"/>
		
		<Space 
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
			android:layout_weight="1"/>
											
	</LinearLayout>
    
    <ListView 
        android:id="@+id/list_view_contests"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
    </ListView>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
	        android:id="@+id/text_view_reward"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
        	android:background="@color/green"
        	android:textColor="@android:color/white"
        	android:textStyle="bold"
            android:text="@string/recompensa_dois_pontos"/>
        
        <TextView 
	        android:id="@+id/text_view_investment"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
        	android:background="@color/orange"
        	android:textColor="@android:color/white"
        	android:textStyle="bold"
            android:text="@string/investimento_dois_pontos"/>
        
        <TextView
            android:id="@+id/text_view_profit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
        	android:background="@color/green"
        	android:textColor="@android:color/white"
        	android:textStyle="bold"
            android:text="@string/lucro_dois_pontos"/>
        
	</LinearLayout>
	
    <TextView
        android:id="@+id/text_view_empty_contests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/gradient_bg_gray"
        android:textStyle="bold"
        android:text="@string/nenhum_concurso_cadastrado" />
    
</LinearLayout>